<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_tests_of_pdd_part_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.pdd.fragment.TestsOfPDDFragmentPartTwo">

    <LinearLayout
        android:id="@+id/linear_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/answer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_true_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/true_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="33dp"
            android:text="@string/true_answer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text_count_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_false_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/false_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/false_answer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/text_count_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="10"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>
